--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,9 @@
             android:layout_weight="1"
             android:padding="20dp"
             android:paddingRight="10dp"
-            android:gravity="center">
+            android:clickable="true"
+            android:gravity="center"
+            android:background="@drawable/selectable_back">
             <LinearLayout
                 android:gravity="center"
                 android:layout_width="match_parent"
@@ -44,7 +46,8 @@
                     android:text="Encode"
                     android:textSize="17sp"
                     android:textColor="#000000"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textStyle="bold"/>
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -53,7 +56,9 @@
             android:layout_weight="1"
             android:padding="20dp"
             android:paddingLeft="10dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:clickable="true"
+            android:background="@drawable/selectable_back">
             <LinearLayout
                 android:gravity="center"
                 android:layout_width="match_parent"
@@ -71,7 +76,8 @@
                 android:text="Decode"
                 android:textSize="17sp"
                 android:textColor="#000000"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:textStyle="bold"/>
             </LinearLayout>
             </LinearLayout>
     </LinearLayout>
