Encode button functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
-    android:layout_height="400dp"
+    android:layout_height="350dp"
+    app:cardCornerRadius="10dp"
     tools:context="com.example.root.pixt.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,6 +29,7 @@
             android:paddingRight="10dp"
             android:clickable="true"
             android:gravity="center"
+            android:id="@+id/encode_btn"
             android:background="@drawable/selectable_back">
             <LinearLayout
                 android:gravity="center"
@@ -45,7 +47,6 @@
                     android:layout_height="wrap_content"
                     android:text="Encode"
                     android:textSize="17sp"
-                    android:textColor="#000000"
                     android:gravity="center"
                     android:textStyle="bold"/>
             </LinearLayout>
@@ -58,6 +59,7 @@
             android:paddingLeft="10dp"
             android:gravity="center"
             android:clickable="true"
+            android:id="@+id/decode_btn"
             android:background="@drawable/selectable_back">
             <LinearLayout
                 android:gravity="center"
@@ -75,7 +77,6 @@
                 android:layout_height="wrap_content"
                 android:text="Decode"
                 android:textSize="17sp"
-                android:textColor="#000000"
                 android:gravity="center"
                 android:textStyle="bold"/>
             </LinearLayout>
