--- a/app/src/main/res/layout/activity_encode.xml
+++ b/app/src/main/res/layout/activity_encode.xml
@@ -4,19 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="350dp"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="0dp"
+    app:cardPreventCornerOverlap="false"
     tools:context="com.example.root.pixt.MainActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/user_image"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="160dp"
             android:layout_gravity="center_horizontal"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"/>
+
+    </RelativeLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/message"
+            android:hint="Your Message Goes Here"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Done"
+                android:clickable="true"
+                android:onClick="encode"
+                android:background="@drawable/selectable_back"
+                android:textColor="@android:color/white"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Cancel"
+                android:clickable="true"
+                android:onClick="cancel"
+                android:background="@drawable/selectable_back"
+                android:textColor="@android:color/white"/>
+
+        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
