--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="350dp"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="0dp"
+    app:cardPreventCornerOverlap="false"
     tools:context="com.example.root.pixt.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
