--- a/app/src/main/res/layout/activity_encode.xml
+++ b/app/src/main/res/layout/activity_encode.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="350dp"
-    app:cardCornerRadius="0dp"
+    app:cardCornerRadius="10dp"
     app:cardPreventCornerOverlap="false"
     tools:context="com.example.root.pixt.MainActivity">
     <LinearLayout
@@ -27,9 +27,16 @@
     </RelativeLayout>
         <EditText
             android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/key"
+            android:gravity="center_vertical"
+            android:hint="Enter Key"/>
+        <EditText
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:id="@+id/message"
+            android:gravity="top"
             android:hint="Your Message Goes Here"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,7 +47,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Done"
+                android:text="Go!"
                 android:clickable="true"
                 android:onClick="encode"
                 android:background="@drawable/selectable_back"
@@ -50,7 +57,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Cancel"
+                android:text="Back"
                 android:clickable="true"
                 android:onClick="cancel"
                 android:background="@drawable/selectable_back"
